--- a/.github/workflows/scrape_cron.yml
+++ b/.github/workflows/scrape_cron.yml
@@ -2,10 +2,10 @@ name: Latest Events Scraper
 
 on:
   schedule:
-    - cron: '*/30 * * * *'
+    - cron: '*/5 * * * *'
   workflow_dispatch:
 
-# QUAN TRỌNG: Cấp quyền ghi để fix lỗi 128
+# THÊM ĐOẠN NÀY ĐỂ CẤP QUYỀN GHI (FIX LỖI 128)
 permissions:
   contents: write
 
@@ -34,9 +34,10 @@ jobs:
         run: |
           git config --global user.name 'GitHub Action'
           git config --global user.email 'action@github.com'
+          # Kiểm tra xem file có tồn tại không trước khi add
           if [ -f "history.json" ]; then
             git add history.json
             git diff --quiet && git diff --staged --quiet || (git commit -m "Update history event log" && git push)
           else
-            echo "No history.json found but job finished."
+            echo "No history.json found to commit."
           fi
